--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,5 +95,8 @@ dependencies {
     //places
     implementation 'com.google.android.libraries.places:places:3.0.0'
 
+    //progress
+    implementation 'com.google.android.material:material:1.3.0'
+
 
 }
