--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,8 +51,10 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
     //Lottie
     implementation "com.airbnb.android:lottie:3.4.0"
+
     //gif
      implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.22'
 
@@ -64,6 +66,7 @@ dependencies {
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
     //GSON
     implementation 'com.google.code.gson:gson:2.10.1'
 
@@ -71,6 +74,7 @@ dependencies {
     implementation "androidx.room:room-ktx:2.5.0"
     implementation "androidx.room:room-runtime:2.5.0"
     kapt "androidx.room:room-compiler:2.5.0"
+
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
 
@@ -82,6 +86,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.5.1"
+
     //Coroutine
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0"
     //circle image
@@ -97,6 +102,9 @@ dependencies {
 
     //progress
     implementation 'com.google.android.material:material:1.3.0'
+
+    //notification
+    implementation "androidx.core:core:1.6.0"
 
 
 }
